--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,10 @@
 	<classpathentry kind="lib" path="C:/lib/curve25519.jar"/>
 	<classpathentry kind="lib" path="C:/lib/json.jar"/>
 	<classpathentry kind="lib" path="C:/lib/sqlite-jdbc-3.8.11.2.jar"/>
+	<classpathentry kind="lib" path="C:/lib/Raptor/openrq-3.3.2.jar" sourcepath="C:/lib/Raptor/OpenRQ-3.3.2.zip">
+		<attributes>
+			<attribute name="javadoc_location" value="http://openrq-team.github.io/openrq/docs/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
