--- a/.classpath
+++ b/.classpath
@@ -2,10 +2,10 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_91"/>
-	<classpathentry kind="lib" path="C:/lib/curve25519.jar"/>
-	<classpathentry kind="lib" path="C:/lib/json.jar"/>
-	<classpathentry kind="lib" path="C:/lib/sqlite-jdbc-3.8.11.2.jar"/>
-	<classpathentry kind="lib" path="C:/lib/Raptor/openrq-3.3.2.jar" sourcepath="C:/lib/Raptor/OpenRQ-3.3.2.zip">
+	<classpathentry kind="lib" path="lib/curve25519.jar"/>
+	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.8.11.2.jar"/>
+	<classpathentry kind="lib" path="lib/json.jar"/>
+	<classpathentry kind="lib" path="lib/Raptor/openrq-3.3.2.jar" sourcepath="lib/Raptor/OpenRQ-3.3.2.zip">
 		<attributes>
 			<attribute name="javadoc_location" value="http://openrq-team.github.io/openrq/docs/"/>
 		</attributes>
