--- a/.classpath
+++ b/.classpath
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_91"/>
-	<classpathentry kind="lib" path="lib/curve25519.jar"/>
-	<classpathentry kind="lib" path="lib/sqlite-jdbc-3.8.11.2.jar"/>
-	<classpathentry kind="lib" path="lib/json.jar"/>
-	<classpathentry kind="lib" path="lib/Raptor/openrq-3.3.2.jar" sourcepath="lib/Raptor/OpenRQ-3.3.2.zip">
+	<classpathentry exported="true" kind="lib" path="lib/curve25519.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/sqlite-jdbc-3.8.11.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/json.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/Raptor/openrq-3.3.2.jar" sourcepath="lib/Raptor/OpenRQ-3.3.2.zip">
 		<attributes>
 			<attribute name="javadoc_location" value="http://openrq-team.github.io/openrq/docs/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
