--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/swt.jar"/>
+	<classpathentry kind="lib" path="lib/fountain1_0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
