--- a/aritra/UndergroundApp/.classpath
+++ b/aritra/UndergroundApp/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/swt.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/UndergroundServer"/>
+	<classpathentry kind="lib" path="lib/fountainAON.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
