--- a/.classpath
+++ b/.classpath
@@ -5,8 +5,8 @@
 	<classpathentry exported="true" kind="lib" path="lib/sqlite-jdbc-3.8.11.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/json.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="lib/swt.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/UndergroundServer"/>
 	<classpathentry kind="lib" path="lib/fountainAON.jar"/>
+	<classpathentry kind="lib" path="lib/SWT win x64/swt.jar" sourcepath="lib/SWT win x64/src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
