--- a/aritra/UndergroundApp/.classpath
+++ b/aritra/UndergroundApp/.classpath
@@ -15,5 +15,10 @@
 			<attribute name="javadoc_location" value="jar:platform:/resource/UndergroundApp/lib/signal/signal-protocol-java-2.2.0-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="lib/Protobuf/protobuf-java-3.1.0.jar" sourcepath="lib/Protobuf/protobuf-java-3.1.0-sources.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:platform:/resource/UndergroundApp/lib/Protobuf/protobuf-java-3.1.0-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
